--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,21 @@
 version: 2.1
 
-executors:
-  python-executor:
-    docker:
-      - image: circleci/python:3.10.2
-
 jobs:
   build:
-    executor: python-executor
+    docker:
+      - image: cimg/python:3.11.1
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
-            - v1-dependencies-
       - run:
           name: Install Dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "requirements.txt" }}
+          command: pip install -r requirements.txt
       - run:
           name: Run Tests
-          command: |
-            . venv/bin/activate
-            pytest
-      - store_artifacts:
-          path: test-reports/
-          destination: test-reports
+          command: pytest
 
 workflows:
   version: 2
-  build-deploy:
+  build_and_test:
     jobs:
       - build
+
