--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,19 +8,30 @@ jobs:
           CHROMEDRIVER_VERSION: "112.0.5615.49"
     steps:
       - checkout
-      - run:
-          name: Install Dependencies
+      name: Install dependencies
           command: |
-            pip install -r requirements.txt
-            curl -O https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
-            unzip chromedriver_linux64.zip
-            sudo mv chromedriver /usr/local/bin/
+            sudo apt-get update
+            sudo apt-get install -y libxss1 libappindicator1 libindicator7
+            sudo apt-get install -y wget unzip
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+            sudo dpkg -i google-chrome*.deb
+            sudo apt-get install -y -f
+            sudo apt-get install -y xvfb
+            sudo wget -q "https://chromedriver.storage.googleapis.com/$(curl https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip" -O chromedriver_linux64.zip
+            sudo unzip chromedriver_linux64.zip -d /usr/local/bin/
+            sudo chmod +x /usr/local/bin/chromedriver
       - run:
-          name: Run Unit Tests
-          command: pytest -k "not e2e"
+          name: Install Python dependencies
+          command: pip install -r requirements.txt
       - run:
-          name: Run End-to-End Tests
-          command: pytest -k "e2e"
+          name: Run tests
+          command: xvfb-run pytest -k "e2e"
+      # - run:
+      #     name: Run Unit Tests
+      #     command: pytest -k "not e2e"
+      # - run:
+      #     name: Run End-to-End Tests
+      #     command: pytest -k "e2e"
 
 workflows:
   version: 2
