--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,11 +4,10 @@ jobs:
   build:
     docker:
       - image: cimg/python:3.11.1
-        environment:
-          CHROMEDRIVER_VERSION: "112.0.5615.49"
     steps:
       - checkout
-      name: Install dependencies
+      - run:
+          name: Install dependencies
           command: |
             sudo apt-get update
             sudo apt-get install -y libxss1 libappindicator1 libindicator7
