--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,28 +3,15 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/python:3.11.1
+      - image: cimg/python:3.11.1-browsers
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y libxss1 libappindicator1 libindicator7
-            sudo apt-get install -y wget unzip
-            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-            sudo dpkg -i google-chrome*.deb
-            sudo apt-get install -y -f
-            sudo apt-get install -y xvfb
-            sudo wget -q "https://chromedriver.storage.googleapis.com/$(curl https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip" -O chromedriver_linux64.zip
-            sudo unzip chromedriver_linux64.zip -d /usr/local/bin/
-            sudo chmod +x /usr/local/bin/chromedriver
       - run:
           name: Install Python dependencies
           command: pip install -r requirements.txt
       - run:
           name: Run tests
-          command: xvfb-run pytest -k "e2e"
+           command: pytest -k "e2e"
       # - run:
       #     name: Run Unit Tests
       #     command: pytest -k "not e2e"
